Preparation make the table

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -210,3 +210,7 @@ label {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.text-danger {
+    color: #a80606;
+}
