--- a/resources/css/multiselect-default.css
+++ b/resources/css/multiselect-default.css
@@ -52,6 +52,7 @@
     align-items: center;
     background: transparent;
     box-sizing: border-box;
+    font-size: smaller;
     display: flex;
     height: 100%;
     left: 0;
